# octopi

./: .gitignore  404.html  CHANGELOG.md  Dockerfile  README.md  copick_config_dataportal_10439.json  index.html  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: deploy-docs.yaml  docs.yml  pre-commit.yml  publish-docker.yml  publish-pypi.yaml  release-please.yml
docs/: index.md  remote_train.md
docs/api/: adding-new-models.md  index.md  inference.md  quick-start.md  training.md
docs/getting-started/: data-import.md  installation.md  quickstart.md
docs/picking/: chimerax-plugin.md  config-setup.md  overview.md
docs/stylesheets/: extra.css
docs/user-guide/: advanced-training.md  cli-tutorial.md  data-import.md  inference.md  labels.md  overview.md  pick-particles.md  training-basics.md  training.md
notebooks/: inference.ipynb  inspect_segmentation_targets.ipynb  localize.ipynb  optuna.ipynb  run_local_train.py  run_mlflow_train.py  segment.ipynb  train.ipynb
notebooks/drafts/: run_multigpu_optuna.py  train_evaluate.ipynb
notebooks/results/: average_metrics.json  metrics.json  results.json  training_parameters.json
octopi/: __init__.py  io.py  main.py  utils.py  visualization_tools.py  workflows.py
octopi/datasets/: augment.py  config.py  generators.py  helpers.py  io.py  loader.py
octopi/entry_points/: _master_loop.py  common.py  create_slurm_submission.py  groups.py  run_create_targets.py  run_evaluate.py  run_extract_mb_picks.py  run_localize.py  run_optuna.py  run_optuna_master.py  run_segment.py  run_segment_predict.py  run_train.py
octopi/extract/: localize.py  membranebound_extract.py
octopi/models/: AttentionUnet.py  DynUnet.py  MedNeXt.py  SegResNet.py  SwinUNETR.py  Unet.py  common.py
octopi/nnunet/: README.md  __init__.py  config.py  mednext_trainer.py  predict.py  prepare.py  train.py  utils.py
octopi/processing/: create_targets_from_picks.py  downloader.py  evaluate.py  importers.py
octopi/pytorch/: hyper_search.py  model_search_submitter.py  search.py  search_helper.py  segmentation.py  segmentation_multigpu.py  submit_search.py  train_helper.py  trainer.py
octopi/pytorch_lightning/: optuna_pl_ddp.py  train_pl.py
octopi/utils/: io.py  parsers.py  progress.py  slurm_config.py  slurm_monitor.py  submit_slurm.py  visualization_tools.py
octopi/vcp/: mlflow_model.py
octopus/: create_targets_from_picks.py  download.py  io.py  main.py  stopping_criteria.py  utils.py  visualization_tools.py
octopus/datasets/: cached_datset.py  generators.py  multi_config_generator.py
octopus/entry_points/: cli.py  common.py  create_slurm_submission.py  run_create_targets.py  run_evaluate.py  run_extract_mb_picks.py  run_extract_midpoint.py  run_localize.py  run_optuna.py  run_segment_predict.py  run_train.py
octopus/extract/: localize.py  membranebound_extract.py  midpoint_extract.py
octopus/models/: common.py
octopus/processing/: create_targets_from_picks.py  download.py  evaluate.py  importers.py
octopus/pytorch/: hyper_search.py  model_search_submitter.py  segmentation.py  trainer.py
src/model_explore/: create_targets_from_picks.py  download.py  evaluate.py  generate_datasets.py  io.py  losses.py  my_metrics.py  optuna_pl.py  optuna_pl_ddp.py  segmentations_from_picks.py  stopping_criteria.py  submit_slurm.py  test.py  train.py  train_pl.py  utils.py  visualization_tools.py
src/model_explore/datasets/: augment.py  cached_datset.py  dataset.py  generators.py  multi_config_generator.py
src/model_explore/entry_points/: common.py  create_slurm_submission.py  run_create_shellsubmit.py  run_create_targets.py  run_evaluate.py  run_extract_mb_picks.py  run_extract_midpoint.py  run_localize.py  run_optuna.py  run_segment_predict.py  run_train.py
src/model_explore/extract/: localize.py  membranebound_extract.py  midpoint_extract.py
src/model_explore/models/: AttentionUnet.py  MedNeXt.py  ModelTemplate.py  SegResNet.py  Unet.py  UnetPlusPlus.py  common.py
src/model_explore/pytorch/: data.py  evaluate.py  extract.py  hyper_search.py  io.py  localize.py  midpoint_extract.py  my_metrics.py  segmentation.py  trainer.py  utils.py
src/model_explore/pytorch/datasets/: generators.py  multi_config_generator.py
src/model_explore/pytorch/entry_points/: run_create_targets.py  run_evaluate.py  run_extract_mb_picks.py  run_extract_midpoint.py  run_local_finetune_train.py  run_local_train.py  (+5 more)
tutorials/inference/: index.html
tutorials/introduction/: index.html
tutorials/training/: index.html
