[tool.poetry]
name = "octopus"
version = "0.0.1"
description = "Model architecture exploration for cryoET particle picking"
authors = ["CZII autonomous 3d particle picking team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
matplotlib = "*"
tqdm = "*"
copick = "*"
nibabel = "*"
mlflow = "2.17.0"
optuna = "4.0.0"
plotly = "*"
pandas = "*"
mrcfile = "*"
kaleido = "*"
seaborn = "*"
ipywidgets = "*"
torch-ema = "*"
multiprocess = "*"
python-dotenv = "*"
pytorch-lightning = "2.4.0"
monai-weekly = { version = "1.5.dev2448", allow-prereleases = true }
optuna-integration = { version = "*", extras = ["botorch", "pytorch_lightning"] }
copick-utils = {git = "https://github.com/copick/copick-utils.git", branch = "main"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^24.8.0"
pre-commit = "^3.8.0"
ruff = "^0.6.4"

[tool.poetry.scripts]
octopus = "octopus.entry_points.cli:cli_main"
octopus-slurm = "octopus.entry_points.cli:cli_slurm_main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
