[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octopi"
version = "1.5.0"  
description = "Model architecture exploration for cryoET particle picking"
authors = [
    {name = "Jonathan Schwartz"},
    {name = "Kevin Zhao"},
    {name = "Daniel Ji"},
    {name = "Utz Ermel"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",        
    "Programming Language :: Python :: 3.9",    
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "tqdm",
    "copick",
    "nibabel",
    "mlflow",
    "optuna",
    "monai",
    "pandas",
    "plotly",
    "mrcfile",
    "kaleido",
    "requests",
    "submitit",
    "torch-ema",
    "matplotlib",
    "ipywidgets",
    "rich-click",
    "copick-utils",
    "multiprocess",
    "optuna-dashboard",
    "optuna-integration[botorch,pytorch_lightning]",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.3",
    "black>=24.8.0",
    "pre-commit>=3.8.0",
    "ruff>=0.6.4",
]
docs = [
    "zensical==0.0.31",
]

[project.scripts]
octopi = "octopi.main:routines"
octopi-slurm = "octopi.main:slurm_routines"

# Keep the hatch.version config so release-please can update both files
[tool.hatch.version]
path = "octopi/__init__.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]*)['\"]"

[tool.hatch.metadata]
allow-direct-references = true
dependency-overrides = [
    "numpy>=2"
]

[project.urls]
Homepage = "https://github.com/chanzuckerberg/octopi"
Documentation = "https://chanzuckerberg.github.io/octopi/"
Issues = "https://github.com/chanzuckerberg/octopi/issues"